/*
 * Copyright 2017-2023 O2 Czech Republic, a.s.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package cz.o2.proxima.scheme.proto.transactions;

message KeyAttribute {
  string entity = 1;
  string key = 2;
  string attributeDesc = 3;
  string attribute = 4;
  bool delete = 5;
  uint64 seqId = 6;
}

message ProtoStreamElement {
  string entity = 1;
  string key = 2;
  string attribute = 3;
  bytes value = 4;
  bool delete = 5;
  uint64 stamp = 6;
}

enum Flags {
  UNKNOWN = 0;
  OPEN = 1;
  COMMITTED = 2;
  ABORTED = 3;
  DUPLICATE = 4;
  UPDATE = 5;
  ROLLBACK = 6;
}

message ProtoRequest {
  repeated KeyAttribute inputAttribute = 1;
  repeated KeyAttribute outputAttribute = 2;
  Flags flags = 3;
  int32 responsePartitionId = 4;
}

message ProtoResponse {
  Flags flags = 1;
  uint64 seqId = 2;
  fixed64 stamp = 3;
  int32 responsePartitionId = 4;
}

message ProtoState {
  Flags flags = 1;
  uint64 seqId = 2;
  fixed64 stamp = 3;
  repeated KeyAttribute inputAttributes = 4;
  repeated KeyAttribute committedAttributes = 5;
}

message TransactionUpdate {
  string targetFamily = 1;
  ProtoStreamElement element = 2;
}

message ProtoCommit {
  uint64 seqId = 1;
  fixed64 stamp = 2;
  repeated ProtoStreamElement updates = 3;
  repeated TransactionUpdate transactionUpdates = 4;
}
